# prf

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  mise.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  collect-coverage.yml  release.yml  run-static-checks.yml  run-tests.yml
docs/: architecture.md  configuration.md  testing.md  usage.md
scripts/: verify-release-version.sh
src/: error.rs  lib.rs  main.rs  report.rs
src/app/: run.rs  scan.rs
src/cleanup/: action.rs  apply.rs  candidate.rs  discovery.rs  mod.rs  plan.rs  report.rs  scope.rs  target.rs
src/cli/: mod.rs  run.rs  scan.rs
src/footprint/: allocation.rs  amount.rs  error.rs  mod.rs
src/fs/: mod.rs  remove.rs  roots.rs  size.rs
src/output/: messages.rs  mod.rs  progress.rs  prompt.rs  report.rs
src/targets/: brew.rs  catalog.rs  category.rs  docker.rs  item.rs  mise.rs  mod.rs  name_matcher.rs  nodejs.rs  python.rs  registry.rs  report.rs  rust.rs  target.rs  traversal.rs  xcode.rs
tests/: cli.rs  safety.rs
tests/cli/: help_and_version.rs  mod.rs  run.rs  safety.rs  scan.rs
tests/harness/: test_context.rs
