[package]
name = "prf"
version = "1.1.0"
edition = "2024"

[dependencies]
byte-unit = "5.1"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rayon = "1.8"
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.10"
